// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account action creators emailRequest makes api call with correct data 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "campaign_id": "support-daily-limit-increase",
      "limit": 50000,
      "previousLimit": "1000",
      "reason": "just because i want",
      "template_id": "daily-limit-increase",
    },
    "method": "POST",
    "url": "/account/email-request",
  },
  "type": "EMAIL_REQUEST",
}
`;

exports[`Account action creators register makes api call with passed data 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "email": "foo@bar.com",
      "first_name": "foo",
      "last_name": "bar",
      "passowrd": "foobar",
      "recaptcha_response": "foofoo",
      "recaptcha_type": "invisible",
      "tou_accepted": true,
    },
    "method": "POST",
    "url": "/account",
  },
  "type": "CREATE_ACCOUNT",
}
`;

exports[`fetch - no params 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "params": Object {},
    "url": "/account",
  },
  "type": "FETCH_ACCOUNT",
}
`;

exports[`fetch with params 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "params": Object {
      "also": "that one",
      "this": "one",
    },
    "url": "/account",
  },
  "type": "FETCH_ACCOUNT",
}
`;

exports[`getPlans 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "url": "/account/plans",
  },
  "type": "GET_PLANS",
}
`;
